2008-03-07  Sebastien Pouliot  <sebastien@ximian.com>

	* DisableDebuggingCodeRule.cs: New. Rule to check for debugging
	CWL left inside assemblies (ref: bug #366450)
	* Gendarme.Rules.BadPractice.mdp: Update MD project file.
	* Makefile.am: Add rule/test to the build.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com>

	* CloneMethodShouldNotReturnNullRule: Remove unused method.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* CheckNewExceptionWithoutThrowingRule.cs
	* CheckNewThreadWithoutStartRule.cs
	* CloneMethodShouldNotReturnNullRule.cs
	* ConstructorShouldNotCallVirtualMethodsRule.cs
	* EqualShouldHandleNullArgRule.cs
	* GetEntryAssemblyMayReturnNullRule.cs
	* ToStringReturnsNullRule.cs
		Update rules wrt framework changes.

2008-01-30  Sebastien Pouliot  <sebastien@ximian.com>

	* CheckNewExceptionWithoutThrowingRule.cs: New. Rule to check that
	all exception we create are thrown (or returned) from all methods. 
	[Andreas Noever]
	* CheckNewThreadWithoutStartRule.cs: New. Rule to check that all
	threads we create are started (or returned) from all methods.
	[Andreas Noever]
	* Gendarme.Rules.BadPractice.xml.in: Add rules descriptions.
	* Makefile.am: Add rules/tests to the build.

2008-01-24  Sebastien Pouliot  <sebastien@ximian.com>

	* ImplementingEqualsButNotGetHashCodeAndViceVersaRule.cs: Rule
	moves (with tests) into Design since it affects the API.
	* ToStringReturnsNullRule.cs: Simplification to avoid uncommon cases
	that added *LOTS* of false positives while still missing some 
	real defects. Now a rock-ified ITypeRule with much lower memory 
	requirements.
	* Gendarme.Rules.BadPractice.xml.in: Remove (moved) definition.
	* Makefile.am: Remove (moved) rule and tests

2008-01-23  Sebastien Pouliot  <sebastien@ximian.com>

	* ConstructorShouldNotCallVirtualMethodsRule.cs: Add recursive 
	checks for non-virtual calls (as they can lead to virtual calls). Add
	check for final methods. Add check for calling 'this' sub-classes 